--- a/mode-settings/modeline-settings.org
+++ b/mode-settings/modeline-settings.org
@@ -24,12 +24,42 @@
 
 ** Doom Modeline
 Bugfix: Requires installing shrink path manually on linux. Not sure why.
-#+begin_src emacs-lisp :load yes
+#+begin_src emacs-lisp :load no
 (use-package
  shrink-path
  :straight
  '(shrink-path :type git :host github :repo "zbelial/shrink-path.el"))
-(use-package doom-modeline :config (doom-modeline-mode 1) (setq doom-modeline-unicode-fallback t))
+(use-package
+ doom-modeline
+ :config
+ (doom-modeline-mode 1)
+ (setq doom-modeline-unicode-fallback t)
+ (defun doom-modeline--project-root ()
+   "Get the path to the project root.
+Return nil if no project was found."
+   (or doom-modeline--project-root
+       (setq doom-modeline--project-root
+             (cond
+              ((and (memq
+                     doom-modeline-project-detection '(auto ffip))
+                    (fboundp 'ffip-project-root))
+               (let ((inhibit-message t))
+                 (ffip-project-root)))
+              ((and (memq
+                     doom-modeline-project-detection
+                     '(auto projectile))
+                    (bound-and-true-p projectile-mode))
+               (projectile-project-root))
+              ((and (memq
+                     doom-modeline-project-detection '(auto project))
+                    (fboundp 'project-current))
+               (when-let ((project (project-current)))
+                 (expand-file-name
+                  (if (fboundp 'project-root)
+                      (project-root project)
+                    (car
+                     (with-no-warnings
+                       (project-roots project))))))))))))
 #+end_src
 
 ** Awesome Tray
