--- a/mode-settings/tramp-settings.org
+++ b/mode-settings/tramp-settings.org
@@ -8,8 +8,11 @@
                                    vc-ignore-dir-regexp
                                    tramp-file-name-regexp))
 #+end_src
-** Magit in Tramp
+** Find file Projectile slowdown
 #+begin_src emacs-lisp :load yes
+(setq projectile-ignored-project-function
+      (lambda (project-root)
+        (string-match-p tramp-file-name-regexp project-root)))
 #+end_src
 ** Local PATH
 #+begin_src emacs-lisp :load yes
@@ -20,7 +23,16 @@
                    (concat "/sshx:your_username@remote_host:" local-path)))))
 (add-hook 'hack-dir-local-variables-hook #'my-setup-tramp-path)
 #+end_src
+** Eglot
+#+begin_src emacs-lisp :load yes
+(defun my/eglot-project-function (dir)
+  "Custom project function for Eglot that avoids using Projectile for remote directories."
+  (if (file-remote-p dir)
+      (cons 'transient dir)  ; Treat remote dirs as transient projects
+    (project-try-vc dir)))   ; Use VC-based detection for local dirs
 
+(setq eglot-project-function #'my/eglot-project-function)
+#+end_src
 ** Lock files
 Disable lock files in TRAMP
 #+begin_src emacs-lisp :load yes
@@ -105,4 +117,49 @@ environment."
     (if (not (file-writable-p file))
         (find-file (concat "/sudo::" file))
       (message "File is already writable"))))
+#+end_src
+
+** Vertico improvements
+#+begin_src emacs-lisp :load yes
+(defun basic-remote-try-completion (string table pred point)
+  (and (vertico--remote-p string)
+       (completion-basic-try-completion string table pred point)))
+(defun basic-remote-all-completions (string table pred point)
+  (and (vertico--remote-p string)
+       (completion-basic-all-completions string table pred point)))
+(add-to-list
+ 'completion-styles-alist
+ '(basic-remote
+   basic-remote-try-completion basic-remote-all-completions nil))
+(setq
+ completion-styles '(orderless basic)
+ completion-category-defaults nil
+ completion-category-overrides '((file (styles basic-remote partial-completion))))
+;; (defun my-filtered-tramp-ssh-completions ()
+;;   "Filter TRAMP completions to exclude specific patterns."
+;;   (let ((completions
+;;          (tramp-completion-handle-file-name-all-completions "")))
+;;     (debug)
+;;     (seq-filter
+;;      (lambda (c)
+;;        (not
+;;         (or (string-suffix-p ".workspace" c)
+;;             (string-suffix-p "." c)
+;;             (member c '("github.com" "gitlab.com")))))
+;;      completions)))
+
+;; ;; Append the custom completion function without overwriting existing handlers
+;; (let ((existing-handler
+;;        (assoc
+;;         'tramp-completion-file-name-handler
+;;         tramp-completion-function-alist)))
+;;   (if existing-handler
+;;       (setcdr existing-handler 'my-filtered-tramp-ssh-completions)
+;;     (setq tramp-completion-function-alist
+;;           (append
+;;            tramp-completion-function-alist
+;;            (list
+;;             (cons
+;;              'tramp-completion-file-name-handler
+;;              'my-filtered-tramp-ssh-completions))))))
 #+end_src
