--- a/mode-settings/term-settings.org
+++ b/mode-settings/term-settings.org
@@ -64,29 +64,6 @@ BUFFER may be either a buffer or its name (a string)."
 
 ** Vterm Toggle
 #+begin_src emacs-lisp :load yes
-;; Special overrides of vterm toggle functions to work better with projectile
-(defun my/projectile-or-project-root ()
-  (if (fboundp 'project-root)
-      (project-root)
-    (ignore-errors
-      (projectile-project-root))))
-(defun vterm-toggle--new (&optional buffer-name)
-  "New vterm buffer."
-  (let* ((buffer-name (or buffer-name vterm-buffer-name))
-         (project-root
-          (when vterm-toggle-project-root
-            (ignore-errors
-              (my/projectile-or-project-root))))
-         (default-directory (or project-root default-directory)))
-    (if vterm-toggle-fullscreen-p
-        (vterm buffer-name)
-      (if (eq major-mode 'vterm-mode)
-          (let ((display-buffer-alist nil))
-            (vterm buffer-name))
-        (vterm-other-window buffer-name)))))
-(defun vterm-toggle--project-root ()
-  (projectile-project-root))
-
 (use-package
  vterm-toggle
  :after vterm
@@ -114,5 +91,28 @@ BUFFER may be either a buffer or its name (a string)."
     (dedicated . t) ;dedicated is supported in emacs27
     (reusable-frames . visible)
     (window-height . 0.3)
-    (window-width . 0.3))))
+    (window-width . 0.3)))
+
+ ;; Special overrides of vterm toggle functions to work better with projectile
+ (defun my/projectile-or-project-root ()
+   (if (fboundp 'project-root)
+       (project-root)
+     (ignore-errors
+       (projectile-project-root))))
+ (defun vterm-toggle--new (&optional buffer-name)
+   "New vterm buffer."
+   (let* ((buffer-name (or buffer-name vterm-buffer-name))
+          (project-root
+           (when vterm-toggle-project-root
+             (ignore-errors
+               (my/projectile-or-project-root))))
+          (default-directory (or project-root default-directory)))
+     (if vterm-toggle-fullscreen-p
+         (vterm buffer-name)
+       (if (eq major-mode 'vterm-mode)
+           (let ((display-buffer-alist nil))
+             (vterm buffer-name))
+         (vterm-other-window buffer-name)))))
+ (defun vterm-toggle--project-root ()
+   (projectile-project-root)))
 #+END_SRC
